syntax = "proto3";
package user;
option go_package = "github.com/chingkamhing/grpc-gateway/gen/srv-proto-user-go;tm2_proto_user_go";

import "user/user_rr.proto";

// User service
service User {
    // Create user
    rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {}
    // List user
    rpc ListUser (ListUserRequest) returns (ListUserReply) {}
    // Get user
    rpc GetUser (GetUserRequest) returns (GetUserReply) {}
    // Update user
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply) {}
    // Delete user
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply) {}
}
